--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
+:root {
+  --font-weight-light: 300;
+  --font-weight-normal: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 700;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
+  font-weight: normal;
+
+  color: #777;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+h1 {
+  font-size: 6rem;
+  font-weight: var(--font-weight-light);
+  letter-spacing: -1.5px;
+}
+
+h2 {
+  font-size: 3.75rem;
+  font-weight: var(--font-weight-light);
+  letter-spacing: -0.5px;
+}
+
+h3 {
+  font-size: 3rem;
+  font-weight: var(--font-weight-normal);
+  letter-spacing: 0px;
+}
+
+h4 {
+  font-size: 2.125rem;
+  font-weight: var(--font-weight-normal);
+  letter-spacing: 0.25px;
+}
+
+h5 {
+  font-size: 1.5rem;
+  font-weight: var(--font-weight-normal);
+  letter-spacing: 0px;
+}
+
+h6 {
+  font-size: 1.25rem;
+  font-weight: var(--font-weight-medium);
+  letter-spacing: 0.15px;
+}
+
+div,
+p {
+  letter-spacing: 0.5px;
+}
+
+.subtitle {
+  font-size: 1rem;
+  font-weight: var(--font-weight-normal);
+  letter-spacing: 0.15px;
 }
