implemented api requests, will need to refactor to use the ones from api controller

--- a/src/components/questions/answer/Answer.css
+++ b/src/components/questions/answer/Answer.css
@@ -15,12 +15,22 @@
   text-align: left;
 }
 
-.username {
-
+.seller {
+  font-weight: bold;
+  margin-right: 5px;
+  margin-left: 5px;
 }
+
+ .username {
+   font-weight: normal;
+   margin-right: 5px;
+   margin-left: 5px;
+}
+
 .help {
-
+  margin-right: 5px;
+  margin-left: 5px;
 }
-.report {
+/* .report {
 
-}
+} */
