--- a/src/components/questions/answerList/AnswerList.css
+++ b/src/components/questions/answerList/AnswerList.css
@@ -1,4 +1,4 @@
-.load_answers {
+.list_btn {
   padding: 3px;
   max-width: 150px;
   cursor: pointer;
@@ -11,7 +11,7 @@
   -webkit-tap-highlight-color: grey;
   user-select: none;
 }
-.load_answers:hover {
+.list_btn:hover {
   background-color: #F5F5F5;
   border-radius: 3px;
 }
