--- a/src/components/questions/questionList/QuestionList.css
+++ b/src/components/questions/questionList/QuestionList.css
@@ -3,7 +3,7 @@
   margin-left: 15px;
 }
 
-button {
-  padding: 5px;
-  margin-right: 20px;
+.search {
+  max-width: 500px;
+  margin-bottom: 20px;
 }
