--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,17 @@ p {
   font-weight: var(--font-weight-normal);
   letter-spacing: 0.15px;
 }
+
+.container header {
+  width: 100%;
+  background-color: slategray;
+  color: lightskyblue;
+}
+
+.container header h1 {
+  padding: 0;
+  margin: 0 auto;
+  max-width: 1200px;
+  font-size: 1.6rem;
+  padding: 0.5rem;
+}
